--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "bctw-ui",
+  "name": "whis-ui",
   "version": "1.0.0",
-  "description": "Front-end (scientist-facing) interface for the BC Telemetry Warehouse.",
+  "description": "Front-end (scientist-facing) interface for WHIS",
   "main": "index.js",
   "scripts": {
-    "postinstall": "(cd react && npm i); (cd react && cp node_modules/reflect-metadata/Reflect.js public); (cd backend && npm i);",
+    "postinstall": "(cd react && npm i); (cd backend && npm i);",
     "start": "npm start --prefix backend",
     "dev": "yarn --cwd react run start",
     "build": "npm --prefix react run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bcgov/bctw-ui.git"
+    "url": "git+https://github.com/bcgov/whis-ui.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bcgov/bctw-ui/issues"
+    "url": "https://github.com/bcgov/whis-ui/issues"
   },
-  "homepage": "https://github.com/bcgov/bctw-ui#readme"
+  "homepage": "https://github.com/bcgov/whis-ui#readme"
 }
