--- a/openshift/templates/whis-ui/whis-ui-deploy.yaml
+++ b/openshift/templates/whis-ui/whis-ui-deploy.yaml
@@ -49,8 +49,6 @@ objects:
           env:
           - name: NODE_ENV
             value: production
-          - name: whis_SESSION_SALT
-            value: "${whis_SESSION_SALT}"
           - name: BASE_URL
             value: /
           - name: whis_API_HOST
@@ -84,6 +82,25 @@ objects:
     type: ClusterIP
     sessionAffinity: None
 
+- apiVersion: v1
+  kind: Route
+  metadata:
+    labels:
+      name: ${NAME}
+      app: ${APP_GROUP}
+      app-group: ${APP_GROUP}
+    name: "${NAME}"
+  spec:
+    host: "${APPLICATION_DOMAIN}"
+    port:
+      targetPort: 8080-tcp
+    tls:
+      insecureEdgeTerminationPolicy: Redirect
+      termination: edge
+    to:
+      kind: Service
+      name: "${NAME}"
+      weight: 100
 parameters:
 - name: NAME
   displayName: Name
@@ -104,7 +121,7 @@ parameters:
   displayName: Image Namespace
   description: The namespace of the OpenShift project containing the imagestream for the application.
   required: true
-  value: 0dff19-tools
+  value: 314c0c-tools
 - name: TAG_NAME
   displayName: Environment TAG name
   description: The TAG name for this environment, e.g., dev, test, prod
@@ -146,3 +163,9 @@ parameters:
   displayName: KEYCLOAK_SERVER_URL
   description: Used to bind with Keycloak
   value: CHANGEME
+- name: APPLICATION_DOMAIN
+  displayName: APPLICATION_DOMAIN
+  description: APPLICATION_DOMAIN
+  value: CHANGEME
+
+
