--- a/openshift/templates/whis-ui/whis-ui-build.yaml
+++ b/openshift/templates/whis-ui/whis-ui-build.yaml
@@ -5,77 +5,37 @@ metadata:
   name: "${NAME}-build-template"
   creationTimestamp: 
 objects:
-- kind: Pipeline
-  apiVersion: tekton.dev/v1beta1
+- kind: BuildConfig
+  apiVersion: build.openshift.io/v1
   metadata:
-    name: "${NAME}-build-and-deploy"
-  spec:    
-    workspaces:
-    - name: shared-workspace
-    params:
-    - name: deployment-name
-      type: string
-      description: name of the deployment to be patched
-      default: "${NAME}"
-    - name: git-url
-      type: string
-      description: url of the git repo for the code of deployment
-      default: "${GIT_REPO_URL}"
-    - name: git-revision
-      type: string
-      description: revision to be used from repo of the code for deployment
-      default: "main"
-    - name: IMAGE
-      type: string
-      description: image to be build from the code
-      default: "${NAME}"
-    tasks:
-    - name: fetch-repository
-      taskRef: 
-        name: git-clone
-        kind: ClusterTask
-      workspaces:
-      - name: output
-        workspace: shared-workspace
-      params:
-      - name: url
-        value: $(params.git-url)
-      - name: subdirectory
-        value: ""
-      - name: deleteExisting
-        value: "true"
-      - name: revision
-        value: $(params.git-revision)
-    - name: build-image
-      taskRef:
-        name: buildah
-        kind: ClusterTask
-      params:
-      - name: IMAGE
-        value: $(params.IMAGE)
-      workspaces:
-      - name: source
-        workspace: shared-workspace
-      runAfter:
-      - fetch-repository
-    - name: apply-manifests
-      taskRef:
-        name: apply-manifests
-      workspaces:
-      - name: source
-        workspace: shared-workspace
-      runAfter:
-      - build-image
-    - name: update-deployment
-      taskRef:
-        name: update-deployment
-      params:
-      - name: deployment
-        value: $(params.deployment-name)
-      - name: IMAGE
-        value: $(params.IMAGE)
-      runAfter:
-      - apply-manifests  
+    name: whis-ui
+    labels:
+      app: whis-ui  
+  spec:
+    nodeSelector: null
+    output:
+      to:
+        kind: ImageStreamTag
+        name: 'whis-ui:latest'
+    resources:
+      limits:
+        cpu: '1'
+        memory: 2Gi
+      requests:
+        cpu: 10m
+        memory: 10Mi
+    strategy:
+      type: Docker
+      dockerStrategy: {}
+    postCommit: {}
+    source:
+      type: Git
+      git:
+        uri: 'https://github.com/bcgov/whis-ui.git'
+        ref: main
+    triggers:
+      - type: ConfigChange
+    runPolicy: Serial
 - kind: ImageStream
   apiVersion: v1
   metadata:
