--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "compression-webpack-plugin": "^9.0.1",
     "core-js": "^3.19.3",
     "css-loader": "^6.5.1",
+    "dotenv": "^16.0.0",
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
