--- a/package.json
+++ b/package.json
@@ -1,88 +1,89 @@
 {
-  "name": "whis-ui",
-  "version": "1.0.0",
-  "description": "Front-end (scientist-facing) interface for WHIS",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bcgov/whis-ui.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bcgov/whis-ui/issues"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@mdi/js": "^6.5.95",
-    "@mdi/react": "^1.5.0",
-    "axios": "^0.24.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "history": "^4.10.1",
-    "keycloak-js": "^17.0.0",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.34",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
-    "webpack-merge": "^5.8.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@types/node": "^16.11.12",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-leaflet": "^2.8.2",
-    "@types/react-redux": "^7.1.20",
-    "@types/react-router": "^5.1.17",
-    "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "@webpack-cli/serve": "^1.6.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.4.2",
-    "babel-loader": "^8.2.3",
-    "compression-webpack-plugin": "^9.0.1",
-    "core-js": "^3.19.3",
-    "css-loader": "^6.5.1",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.4.1",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.4.3",
-    "mini-css-extract-plugin": "^0.12.0",
-    "node-sass": "^7.0.0",
-    "regenerator-runtime": "^0.13.9",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
-  },
-  "scripts": {
-    "dist": "webpack --mode production --config webpack.dist.js",
-    "build": "webpack --mode production --config webpack.dist.js",
-    "dev": "webpack serve --config webpack.dev.js ",
-    "check-types": "tsc",
-    "test": "jest --coverage",
-    "lint": "eslint '*/**/*.{js,ts,tsx}'"
-  },
-  "homepage": "https://github.com/bcgov/whis-ui#readme"
+	"name": "whis-ui",
+	"version": "1.0.0",
+	"description": "Front-end (scientist-facing) interface for WHIS",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bcgov/whis-ui.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/bcgov/whis-ui/issues"
+	},
+	"dependencies": {
+		"@material-ui/core": "^4.12.4",
+		"@material-ui/icons": "^4.11.3",
+		"@mdi/js": "^6.6.96",
+		"@mdi/react": "^1.5.0",
+		"axios": "^0.26.1",
+		"clean-webpack-plugin": "^4.0.0",
+		"history": "^5.3.0",
+		"keycloak-js": "^17.0.1",
+		"moment": "^2.29.2",
+		"moment-timezone": "^0.5.34",
+		"prop-types": "^15.8.1",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-redux": "^7.2.8",
+		"react-router": "^6.3.0",
+		"react-router-dom": "^6.3.0",
+		"redux": "^4.1.2",
+		"redux-logger": "^3.0.6",
+		"redux-saga": "^1.1.3",
+		"webpack-merge": "^5.8.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.17.9",
+		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+		"@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+		"@babel/plugin-proposal-optional-chaining": "^7.16.7",
+		"@babel/preset-env": "^7.16.11",
+		"@babel/preset-react": "^7.16.7",
+		"@babel/preset-typescript": "^7.16.7",
+		"@types/node": "^17.0.23",
+		"@types/react": "^18.0.3",
+		"@types/react-dom": "^18.0.0",
+		"@types/react-leaflet": "^2.8.2",
+		"@types/react-redux": "^7.1.23",
+		"@types/react-router": "^5.1.18",
+		"@types/react-router-dom": "^5.3.3",
+		"@typescript-eslint/eslint-plugin": "^5.19.0",
+		"@typescript-eslint/parser": "^5.19.0",
+		"@webpack-cli/serve": "^1.6.1",
+		"babel-eslint": "^10.1.0",
+		"babel-jest": "^27.5.1",
+		"babel-loader": "^8.2.4",
+		"compression-webpack-plugin": "^9.2.0",
+		"core-js": "^3.21.1",
+		"css-loader": "^6.7.1",
+		"dotenv": "^16.0.0",
+		"eslint": "^8.13.0",
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.4.0",
+		"eslint-plugin-standard": "^5.0.0",
+		"html-webpack-plugin": "^5.5.0",
+		"jest": "^27.5.1",
+		"mini-css-extract-plugin": "^2.6.0",
+		"node-sass": "^7.0.1",
+		"prettier": "^2.6.2",
+		"regenerator-runtime": "^0.13.9",
+		"resolve-url-loader": "^5.0.0",
+		"sass-loader": "^12.6.0",
+		"style-loader": "^3.3.1",
+		"ts-node": "^10.7.0",
+		"typescript": "^4.6.3",
+		"webpack": "^5.72.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "^4.8.1"
+	},
+	"scripts": {
+		"dist": "webpack --mode production --config webpack.dist.js",
+		"build": "webpack --mode production --config webpack.dist.js",
+		"dev": "webpack serve --config webpack.dev.js ",
+		"check-types": "tsc",
+		"test": "jest --coverage",
+		"lint": "eslint '*/**/*.{js,ts,tsx}'"
+	},
+	"homepage": "https://github.com/bcgov/whis-ui#readme"
 }
