--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
 		"url": "https://github.com/bcgov/whis-ui/issues"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
 		"@material-ui/core": "^4.12.4",
 		"@material-ui/icons": "^4.11.3",
 		"@mdi/js": "^6.6.96",
 		"@mdi/react": "^1.5.0",
+		"@mui/icons-material": "^5.6.2",
+		"@mui/material": "^5.7.0",
 		"axios": "^0.26.1",
 		"clean-webpack-plugin": "^4.0.0",
 		"history": "^5.3.0",
