--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 		"@mdi/react": "^1.5.0",
 		"@mui/icons-material": "^5.6.2",
 		"@mui/material": "^5.7.0",
+		"@mui/x-date-pickers": "^5.0.0-beta.5",
 		"axios": "^0.26.1",
 		"clean-webpack-plugin": "^4.0.0",
+		"date-fns": "^2.29.1",
 		"history": "^5.3.0",
 		"keycloak-js": "^17.0.1",
 		"moment": "^2.29.2",
