--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-hook-form": "^7.37.0",
 		"react-redux": "^7.2.8",
 		"react-router": "^6.3.0",
 		"react-router-dom": "^6.3.0",
