--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@babel/preset-env": "^7.16.11",
 		"@babel/preset-react": "^7.16.7",
 		"@babel/preset-typescript": "^7.16.7",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
 		"@types/node": "^17.0.23",
 		"@types/react": "^18.0.3",
 		"@types/react-dom": "^18.0.0",
@@ -72,11 +73,13 @@
 		"mini-css-extract-plugin": "^2.6.0",
 		"node-sass": "^7.0.1",
 		"prettier": "^2.6.2",
+		"react-refresh": "^0.14.0",
 		"regenerator-runtime": "^0.13.9",
 		"resolve-url-loader": "^5.0.0",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
 		"ts-node": "^10.7.0",
+		"type-fest": "^3.2.0",
 		"typescript": "^4.6.3",
 		"webpack": "^5.72.0",
 		"webpack-cli": "^4.9.2",
