--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"date-fns": "^2.29.1",
 		"history": "^5.3.0",
 		"keycloak-js": "^17.0.1",
+		"lodash": "^4.17.21",
 		"moment": "^2.29.2",
 		"moment-timezone": "^0.5.34",
 		"prop-types": "^15.8.1",
