--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,18 @@
 	"parser": "@typescript-eslint/parser",
 	"rules": {
 		"complexity": "off",
-		"indent": ["error", "tab"]
+		"no-mixed-spaces-and-tabs": "off",
+		"indent": [
+			"error",
+			"tab"
+		]
 	},
-	"plugins": ["@typescript-eslint"],
-	"extends": ["eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended"]
+	"plugins": [
+		"@typescript-eslint"
+	],
+	"extends": [
+		"eslint:recommended",
+		"plugin:@typescript-eslint/eslint-recommended",
+		"plugin:@typescript-eslint/recommended"
+	]
 }
