--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"redux": "^4.1.2",
 		"redux-logger": "^3.0.6",
 		"redux-saga": "^1.1.3",
+		"sass": "^1.57.1",
 		"webpack-merge": "^5.8.0"
 	},
 	"devDependencies": {
@@ -72,7 +73,6 @@
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^27.5.1",
 		"mini-css-extract-plugin": "^2.6.0",
-		"node-sass": "^7.0.1",
 		"prettier": "^2.6.2",
 		"react-refresh": "^0.14.0",
 		"regenerator-runtime": "^0.13.9",
