--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,10 @@
 		"no-mixed-spaces-and-tabs": "off",
 		"indent": [
 			"error",
-			"tab"
+			"tab",
+			{
+				"SwitchCase": 0
+			}
 		]
 	},
 	"plugins": [
