--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@mdi/react": "^1.5.0",
 		"@mui/icons-material": "^5.6.2",
 		"@mui/material": "^5.7.0",
+		"@mui/x-data-grid": "^5.17.25",
 		"@mui/x-date-pickers": "^5.0.0-beta.5",
 		"axios": "^0.26.1",
 		"clean-webpack-plugin": "^4.0.0",
